packages/server/public/saltcorn-builder.css
/* ... */
.builder-left-enlarged div.toolbox-card.componets-and-library-accordion {
  width: 13.35rem;
  padding-right: 1rem;
  margin-bottom: 1rem;
}

div.toolbox-card {
  width: 9.2rem;
  padding-right: 1rem;
  margin-bottom: 1rem;
}

.builder-left-enlarged div.wrap-builder-elem {
  width: 33%;
  height: 4rem;
  position: relative;
}
.builder-left-shrunk div.wrap-builder-elem {
  width: 50%;
  height: 4rem;
  position: relative;
}

.builder-left-enlarged div.toolbox-card div.wrap-builder-elem:nth-child(2) {
  border-right: 1px solid #bcbcbc;
}

div.toolbox-card div.wrap-builder-elem:nth-child(1) {
  border-right: 1px solid #bcbcbc;
}
div.toolbar-row {
  border-top: 1px solid #bcbcbc;
}

div.toolbar-row:nth-child(1) {
  border-top: none;
}

div.wrap-builder-elem label {
  position: absolute;
  bottom: -1px;
  text-transform: uppercase;
  font-size: x-small;
}

.builder-sidebar h5 {
  text-decoration: underline;
}

#builder-main-canvas {
  height: calc(100vh - 70px);
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

#builder-main-canvas .is-text a {
  pointer-events: none;
  text-decoration: underline;
}

#builder-main-canvas .selected-node {
  position: relative;
}

#builder-main-canvas .selected-node.is-text {
  min-height: 1rem;
  min-width: 15px;
}
#builder-main-canvas .selected-node::after {
  content: " ";
  border: 1px dashed #2680eb;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  pointer-events: none;
  display: block;
}

.canvas {
  outline: 1px dashed #808080;
}

#builder-main-canvas .builder-columns {
  padding: 4px;
  outline: 1px dashed transparent;
}
#builder-main-canvas .builder-columns:hover {
  outline-color: #b0b0b0;
}

#builder-main-canvas div.root-canvas {
  margin-top: 1px;
  padding: 2px;
}

#builder-main-canvas.emptymsg div.root-canvas:empty:before {
  font-size: 26px;
  opacity: 0.5;
  margin-left: 10px;
  content: "Drag-and-drop components here";
}

#builder-main-canvas div.list-empty-msg:empty:before {
  opacity: 0.5;
  margin-left: 10px;
  content: "Drag-and-drop components here";
}

#builder-main-canvas .image-widget {
  min-width: 15px;
  min-height: 15px;
}

div.settings-panel input[type="number"] {
  border-width: 1px;
}

div.settings-panel .form-control {
  padding: 0.375rem 0.75rem;
}
div.settings-panel .form-select {
  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
}

button.btnstylesel {
  padding-left: 5px;
  padding-right: 2px;
}

div.settings-panel div.rfip {
  margin: 0px;
  width: 100%;
}

div.builder-library div.rfip {
  margin: 0px;
  width: 100%;
}

div.settings-panel div.rfipbtn {
  width: 100%;
}

.left-builder-col {
  padding-right: 0px;
}

div.componets-and-library-accordion {
  margin-top: -0.25rem;
}

.builder-left-enlarged .componets-and-library-accordion {
  min-height: 20vh;
}

.builder-left-shrunk .componets-and-library-accordion {
  min-height: 35vh;
}
.builder-layers {
  max-height: calc(45vh - 50px);
  overflow-y: scroll;
}

.builder-library .dropdown {
  overflow: visible;
}

/* 
Contains code from https://github.com/tpaksu/boxmodel
Copyright (c) 2017 Taha Paksu
*/

.boxmodel-container {
  display: inline-flex;
  flex-direction: column;
  flex-flow: column wrap;
  font-family: "Consolas", "Monaco", monospace;
  font-size: 12px;
  position: relative;
}
.boxmodel-container .boxmodel-info {
  font-size: 10px;
  font-family: Verdana;
  font-style: normal;
  text-align: left;
  line-height: 14px;
  margin: 2px 0 0 0;
  padding: 0px;
  margin-top: 2px;
}
.boxmodel-container div:not(.flex-row) {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: space-between;
  padding: 0;
  margin: 0;
}
.boxmodel-container span.boxmodel-text {
  font-size: 8.5px;
  font-family: Verdana, Geneva, sans-serif;
  display: inline-block;
  user-select: none;
}
.boxmodel-container span.boxmodel-text.boxmodel-header {
  position: absolute;
  top: 2px;
  left: 2px;
  color: #777;
}
.boxmodel-container .boxmodel-margin {
  background: #ffffff;
  border: 1px dashed #aaa;
  position: relative;
}
.boxmodel-container .boxmodel-border {
  background: #ddd;
  border: 2px solid #aaa;
  position: relative;
}
.boxmodel-container .boxmodel-padding {
  background: #eee;
  border: 1px dashed #aaa;
  position: relative;
}
.boxmodel-container .boxmodel-content {
  background: #fff;
  height: 30px;
  margin: 0;
  border: 1px solid #aaa;
  position: relative;
  font-family: Verdana, Geneva, sans-serif;
  font-size: 10px;
}
.boxmodel-container .flex-row {
  text-align: center;
}
.boxmodel-container .boxmodel-input-direction-top,
.boxmodel-container .boxmodel-input-direction-bottom {
  display: block;
  padding: 0;
  margin: 0;
  line-height: 0;
}
.boxmodel-container .boxmodel-input-direction-right,
.boxmodel-container .boxmodel-input-direction-left {
  position: relative;
}
.boxmodel-container input,
.boxmodel-container input:focus,
.boxmodel-container input:active {
  background: transparent;
  color: black;
  font-size: 9px;
  font-family: Verdana, Geneva, sans-serif;
  box-shadow: none;
  border: 1px solid transparent;
  outline: none;
  user-select: none;
  margin: 0px;
  padding: 1px;
  text-align: center;
  cursor: pointer;
}
.boxmodel-container .boxmodel-input-container {
  cursor: pointer;
}
.boxmodel-container .boxmodel-header {
  cursor: pointer;
}
.boxmodel-container .dim-display {
  background: transparent;
  color: black;
  font-size: 9px;
  font-family: Verdana, Geneva, sans-serif;
  box-shadow: none;
  border: 1px solid transparent;
  outline: none;
  user-select: none;
  margin: 0px;
  padding: 1px;
  text-align: center;
  width: 23px;
  height: 40px;
}

.boxmodel-container .dim-display-padding {
  background: transparent;
  color: black;
  font-size: 9px;
  font-family: Verdana, Geneva, sans-serif;
  box-shadow: none;
  border: 1px solid transparent;
  outline: none;
  user-select: none;
  margin: 0px;
  padding: 1px;
  text-align: center;
  width: 23px;
  height: 30px;
}
/* ... */

